Bug 408082 - krarc stopped working with rpm
Summary: krarc stopped working with rpm
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: krarc (other bugs)
Version First Reported In: 2.7.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
: 414489 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-05-29 20:01 UTC by dutchkind
Modified: 2020-01-13 13:50 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Krusader history (113.53 KB, image/png)
2019-07-09 13:28 UTC, Davide Gianforte
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dutchkind 2019-05-29 20:01:49 UTC
SUMMARY Ever since I use Krusader I can browse into rpm archives by just clicking on them, just like any other archive. Now I get a 'the folder xxx.rpm doesn't exist'


STEPS TO REPRODUCE
1. Double click on rpm package
2. 
3. 

OBSERVED RESULT
Error that folder doesn't exist

EXPECTED RESULT
Should open as a folder, a browsable archive

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.58.0
Qt Version: 5.12.3

ADDITIONAL INFORMATION
Opensuse tumbleweed x86_64
Comment 1 dutchkind 2019-05-31 15:42:00 UTC
I tried this in opensuse Leap 15.1 on the same pc, with the same krusader version there is no problem entering rpm packages, so it must be something else that broke krarc
Comment 2 Davide Gianforte 2019-06-09 06:51:27 UTC
What is the version of RPM package on both system?
Comment 3 Bug Janitor Service 2019-06-24 04:33:08 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 4 dutchkind 2019-06-24 09:32:20 UTC
Sorry, have been away for two weeks.

This are the rpm's installed: 
tumbleweed: krusader-2.7.1-2.2.x86_64
15.1: krusader-2.7.1-lp151.2.2.x86_64

Both have the same version number
Comment 5 Davide Gianforte 2019-07-09 13:28:01 UTC
Created attachment 121422 [details]
Krusader history

Krusader history shows conflict between file: and krarc:
Comment 6 dutchkind 2019-07-09 15:35:05 UTC
(In reply to Davide Gianforte from comment #5)
> Created attachment 121422 [details]
> Krusader history
> 
> Krusader history shows conflict between file: and krarc:

I tried what you showed and get the same. I can browse inside by selecting krarc, but when entering the folder structure, have to repeat for each folder I enter. Is there a fix for this? And what caused it?
Comment 7 Ariel Rosenfeld 2019-08-01 17:26:10 UTC
I can replicate it on archlinux with both the krusader 2.7.1 from the repos and the krusader-git 2.8.0.dev.r6038.ga4ad17ba-1 from aur

for me it effects both rpm and rar

like what was reported it shows both a krarc and file uri with the file uri complaining folder does not exist, switching back to the krarc uri in history the proper contents listing is shown
Comment 8 Davide Gianforte 2019-09-12 12:10:01 UTC
Rar should be fixed in KIO-5.62.0, can you check?
Comment 9 Ariel Rosenfeld 2019-09-16 12:09:52 UTC
Updated to KIO-5.62.0 and rar is working. thank you!

rpm still isnt, the error message is about the rpm command missing, AFIAK libarchive is supposed to be used and not rpm itself. at least with ark.
Comment 10 Davide Gianforte 2019-12-22 15:09:25 UTC
*** Bug 414489 has been marked as a duplicate of this bug. ***
Comment 11 Davide Gianforte 2020-01-01 10:46:59 UTC
Git commit a6d068dee88af873b4aef4ff8cd369ed709ba537 by Davide Gianforte.
Committed on 01/01/2020 at 11:38.
Pushed by gengisdave into branch 'master'.

[KUrlNavigator] Add RPM support to krarc:

This patch let users who have Krusader installed to browse RPM as archives
using the `krarc` protocol without conflicts with the `file` protocol.
FIXED: [ 408082 ] krarc stopped working with rpm

Differential Revision: https://phabricator.kde.org/D26155

M  +2    -0    src/filewidgets/kurlnavigator.cpp

https://commits.kde.org/kio/a6d068dee88af873b4aef4ff8cd369ed709ba537
Comment 12 Kevin Kofler 2020-01-13 13:36:12 UTC
Unfortunately, the hardcoded list still misses a bunch of MIME types supported by krarc:
application/gzip
application/x-bzip
application/x-lzma
application/x-xz
application/x-java-archive

So, compressed files that are not tarballs, and Java JAR archives (which are just ZIP archives with a .jar extension). Shall I open a new bug report for those?
Comment 13 Kevin Kofler 2020-01-13 13:50:48 UTC
The nasty part about that is that in Krusader, the list of MIME types to open with krarc is configurable (and it actually works on more MIME types than are configured by default), but having the list hardcoded in KF5-KIO defeats that entirely and breaks all the formats not included in the hardcoded list.