[KUrlNavigator] Add RPM support to krarc:

This patch let users who have Krusader installed to browse RPM as archives
using the `krarc` protocol without conflicts with the `file` protocol.

BUG: 408082
FIXED: [ 408082 ] krarc stopped working with rpm

Differential Revision: https://phabricator.kde.org/D26155